exercise 2 - mostly finished

--- a/exerciseone.ipynb
+++ b/exerciseone.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "0c81a410-cf0f-4b45-9ef8-da6deb4cc816",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "8368fec0-c9f3-494f-a3a4-67701e4a35e8",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "6e0a9727-2f3a-4e87-bd9e-a4015cf38c69",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "d841b019-9ee0-4b0b-aa79-6d6d4449bba9",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "38ad76d8-7cb6-450b-a410-0e2f4172b8b7",
    "metadata": {},
    "outputs": [],
@@ -110,12 +110,14 @@
     "\n",
     "# call lambda function on relevant columns\n",
     "mypd.mme=mypd.mme.apply(lambda x: my_lambda(x))\n",
-    "mypd.mmt=mypd.mmt.apply(lambda x: my_lambda(x))"
+    "mypd.mme = mypd.mme/10\n",
+    "mypd.mmt=mypd.mmt.apply(lambda x: my_lambda(x))\n",
+    "mypd.mmt = mypd.mmt/10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "074a3a1b-774b-4c8a-9606-f872f3c7418c",
    "metadata": {},
    "outputs": [],
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e4ba3497-d55b-4eca-b8fc-b6afd0c4ad7c",
    "metadata": {},
    "outputs": [],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "9950d7c5-b286-4c3f-91f9-fb1bb6601c11",
    "metadata": {
     "tags": []
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "c01fe167-c1c5-4127-8392-e22ef9cceb26",
    "metadata": {},
    "outputs": [
@@ -176,7 +178,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "5f0e1d1c-5315-4408-be8d-379f404d9390",
    "metadata": {},
    "outputs": [
@@ -247,8 +249,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>9208.733158</td>\n",
-       "      <td>9212.264114</td>\n",
+       "      <td>920.873316</td>\n",
+       "      <td>921.226411</td>\n",
        "      <td>2.56</td>\n",
        "      <td>3.20</td>\n",
        "    </tr>\n",
@@ -267,8 +269,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>9219.326026</td>\n",
-       "      <td>9219.326026</td>\n",
+       "      <td>921.932603</td>\n",
+       "      <td>921.932603</td>\n",
        "      <td>2.56</td>\n",
        "      <td>2.40</td>\n",
        "    </tr>\n",
@@ -287,8 +289,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>9233.449849</td>\n",
-       "      <td>9251.104629</td>\n",
+       "      <td>923.344985</td>\n",
+       "      <td>925.110463</td>\n",
        "      <td>2.08</td>\n",
        "      <td>2.56</td>\n",
        "    </tr>\n",
@@ -307,8 +309,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>9258.166541</td>\n",
-       "      <td>9254.635585</td>\n",
+       "      <td>925.816654</td>\n",
+       "      <td>925.463559</td>\n",
        "      <td>2.24</td>\n",
        "      <td>3.04</td>\n",
        "    </tr>\n",
@@ -327,8 +329,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>9240.511761</td>\n",
-       "      <td>9240.511761</td>\n",
+       "      <td>924.051176</td>\n",
+       "      <td>924.051176</td>\n",
        "      <td>2.24</td>\n",
        "      <td>2.40</td>\n",
        "    </tr>\n",
@@ -351,15 +353,15 @@
        "3            3.8      n          0            0          0            0   \n",
        "4            3.0     so          0            0          0            0   \n",
        "\n",
-       "           mme          mmt  tempe  tempt  \n",
-       "0  9208.733158  9212.264114   2.56   3.20  \n",
-       "1  9219.326026  9219.326026   2.56   2.40  \n",
-       "2  9233.449849  9251.104629   2.08   2.56  \n",
-       "3  9258.166541  9254.635585   2.24   3.04  \n",
-       "4  9240.511761  9240.511761   2.24   2.40  "
+       "          mme         mmt  tempe  tempt  \n",
+       "0  920.873316  921.226411   2.56   3.20  \n",
+       "1  921.932603  921.932603   2.56   2.40  \n",
+       "2  923.344985  925.110463   2.08   2.56  \n",
+       "3  925.816654  925.463559   2.24   3.04  \n",
+       "4  924.051176  924.051176   2.24   2.40  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
