--- a/exercisetwo.ipynb
+++ b/exercisetwo.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "33432e03-6f95-4163-afc2-b55a0db7200f",
    "metadata": {
     "tags": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "4c2622ca-d510-47e3-9b5f-ec0edca42b56",
    "metadata": {
     "tags": []
@@ -76,7 +76,7 @@
        "<AxesSubplot:xlabel='md', ylabel='tempe'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "3984246c-174d-4b92-b13b-cd858c436753",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "1acc67b7-13a4-4e47-a780-7fc3ea9f162b",
    "metadata": {},
    "outputs": [
@@ -234,43 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "dd72771e-8507-4a3b-a43e-d379664e69fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['year', 'month', 'day', 'pressure_e', 'temperature_e', 'wind_e',\n",
-       "       'pressure_t', 'temperature_t', 'wind_t', 'morning_s', 'afternoon_s',\n",
-       "       'morning_r', 'afternoon_r', 'mme', 'mmt', 'tempe', 'tempt', 'md'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mypd.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "75b50edc-9c6c-4331-8acf-6d01e01eb27a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check each value in the temperature,pressure and precipitation columns\n",
-    "\n",
     "# check_std tests each value in pd.series x against a preset number of standard deviations.\n",
     "def check_std(x):\n",
     "    data = []\n",
-    "    # get standard deviation of values in column\n",
+    "    # get standard deviation of values in x\n",
     "    a = np.std(x)\n",
-    "    # get mean of values in column\n",
+    "    # get mean of values in x\n",
     "    b = np.mean(x)\n",
     "    # set test parameter to 4\n",
     "    c = 4\n",
@@ -303,45 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "39cb0bcb-dd99-438e-b9f1-5f7f614e04c1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['year', 'month', 'day', 'pressure_e', 'temperature_e', 'wind_e',\n",
-       "       'pressure_t', 'temperature_t', 'wind_t', 'morning_s', 'afternoon_s',\n",
-       "       'morning_r', 'afternoon_r', 'mme', 'mmt', 'tempe', 'tempt', 'md'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mypd.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "51709c6e-bb83-420e-9583-6e98c3bb33af",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# check values that should not be negative"
+    "# save exercise for review"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c6c012f-61ef-4636-ba36-3133f08fe04d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
