--- a/assimilation.ipynb
+++ b/assimilation.ipynb
@@ -8,7 +8,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "3d35c1c4-3d68-4bdd-b8f3-4f5ad624af70",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "20     20     0.0    0,000     1    4     0.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,150 +289,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c9f7ab7d-375e-41b5-b9c2-4a848f9089f7",
+   "execution_count": null,
+   "id": "b8d34d00-0abf-4a91-bf8c-9c2dc07334ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decay_function(x, decay):\n",
+    "    data = x*math.exp(decay)\n",
+    "    \n",
+    "    return data\n",
+    "def dependent(decayx, ):\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08fe43f4-a349-4ac8-ab0c-4ce0f9f232bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[:, newdecy] = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d97d12d0-addd-4714-869f-b40c8ee720a2",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qm/b_vqfzj15gv6xshfw418_dfm0000gn/T/ipykernel_60494/19091969.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/qm/b_vqfzj15gv6xshfw418_dfm0000gn/T/ipykernel_1410/217306388.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  mypd[\"xb\"][1] = mypd[\"x\"][0]*2\n"
+      "  mypd[\"xb\"][1] = mypd[\"x\"][0]*math.exp(decay)\n"
      ]
     }
    ],
    "source": [
-    "mypd[\"xb\"][1] = mypd[\"x\"][0]*2"
+    "# lambda(xi)=xbi+1\n",
+    "decay = -0.5\n",
+    "sigma = 0.05\n",
+    "mypd[\"xbx\"] = mypd[\"x\"][0]*math.exp(decay)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a0a91dfa-808f-4c8a-a19f-fa033e17a588",
+   "execution_count": 3,
+   "id": "c9f7ab7d-375e-41b5-b9c2-4a848f9089f7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>t (s)</th>\n",
-       "      <th>xb</th>\n",
-       "      <th>_b2</th>\n",
-       "      <th>y</th>\n",
-       "      <th>_y2</th>\n",
-       "      <th>x</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>920,465</td>\n",
-       "      <td>598</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>485,640</td>\n",
-       "      <td>370</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>154,461</td>\n",
-       "      <td>228</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38,564</td>\n",
-       "      <td>139</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   t (s)      xb      _b2     y  _y2       x\n",
-       "0      0  1000.0     1000  1000    4  1000.0\n",
-       "1      1  2000.0  920,465   598    4     NaN\n",
-       "2      2     NaN  485,640   370    4     NaN\n",
-       "3      3     NaN  154,461   228    4     NaN\n",
-       "4      4     NaN   38,564   139    4     NaN"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"numpy.int64\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/qm/b_vqfzj15gv6xshfw418_dfm0000gn/T/ipykernel_1410/3963344654.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"x\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"xb\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"_b2\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"_b2\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"_y2\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"numpy.int64\") to str"
+     ]
     }
    ],
+   "source": [
+    "\n",
+    "mypd[\"x\"][1] = mypd[\"xb\"][1]*(mypd[\"_b2\"][1]/(mypd[\"_b2\"][1] + mypd[\"_y2\"][1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0a91dfa-808f-4c8a-a19f-fa033e17a588",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "mypd.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e59c1b7b-7577-4434-a868-44202c5e86c9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'float' and 'module'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/qm/b_vqfzj15gv6xshfw418_dfm0000gn/T/ipykernel_60494/2570390651.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmypd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"xb\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"x\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'float' and 'module'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "decay = 0.5\n",
-    "sigma = 0.05\n",
+    "\n",
     "\n",
     "for i in mypd.index:\n",
     "    mypd[\"xb\"][i] = mypd[\"x\"][i]*np"
