review and assimilation q1

--- a/assimilation.ipynb
+++ b/assimilation.ipynb
@@ -4,267 +4,18 @@
    "cell_type": "markdown",
    "id": "952ffc19-b67e-4c88-8937-6a1d5a91c6a0",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Data Assimilation"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "3d35c1c4-3d68-4bdd-b8f3-4f5ad624af70",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>t (s)</th>\n",
-       "      <th>xb</th>\n",
-       "      <th>_b2</th>\n",
-       "      <th>y</th>\n",
-       "      <th>_y2</th>\n",
-       "      <th>x</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>920,465</td>\n",
-       "      <td>598</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>485,640</td>\n",
-       "      <td>370</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>154,461</td>\n",
-       "      <td>228</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>38,564</td>\n",
-       "      <td>139</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8,299</td>\n",
-       "      <td>83</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1,599</td>\n",
-       "      <td>51</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,299</td>\n",
-       "      <td>34</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,054</td>\n",
-       "      <td>20</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,009</td>\n",
-       "      <td>13</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,002</td>\n",
-       "      <td>10</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,000</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>16</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>17</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>18</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>19</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,000</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>20</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0,000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    t (s)      xb      _b2     y  _y2       x\n",
-       "0       0  1000.0     1000  1000    4  1000.0\n",
-       "1       1     0.0  920,465   598    4     0.0\n",
-       "2       2     0.0  485,640   370    4     0.0\n",
-       "3       3     0.0  154,461   228    4     0.0\n",
-       "4       4     0.0   38,564   139    4     0.0\n",
-       "5       5     0.0    8,299    83    4     0.0\n",
-       "6       6     0.0    1,599    51    4     0.0\n",
-       "7       7     0.0    0,299    34    4     0.0\n",
-       "8       8     0.0    0,054    20    4     0.0\n",
-       "9       9     0.0    0,009    13    4     0.0\n",
-       "10     10     0.0    0,002    10    4     0.0\n",
-       "11     11     0.0    0,000     6    4     0.0\n",
-       "12     12     0.0    0,000     1    4     0.0\n",
-       "13     13     0.0    0,000     4    4     0.0\n",
-       "14     14     0.0    0,000     3    4     0.0\n",
-       "15     15     0.0    0,000     3    4     0.0\n",
-       "16     16     0.0    0,000     1    4     0.0\n",
-       "17     17     0.0    0,000     0    4     0.0\n",
-       "18     18     0.0    0,000     2    4     0.0\n",
-       "19     19     0.0    0,000     3    4     0.0\n",
-       "20     20     0.0    0,000     1    4     0.0"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "# import packages\n",
     "\n",
@@ -283,113 +34,79 @@
     "\n",
     "\n",
     "# read in the data\n",
-    "mypd = pd.read_csv(\"Reanalysis_DataAssimilation_Exercise1.csv\",sep = \";\")\n",
-    "mypd.fillna(0)"
+    "mypd = pd.read_csv(\"Reanalysis_DataAssimilation_Exercise1.csv\",sep = \";\", decimal = \",\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9691878-6b17-4746-898b-5d8a3192d4a1",
+   "metadata": {},
+   "source": [
+    "## Question 1 Kalman Filter\n",
+    "*Assume that you have a substance that decays radioactively and you want to esimate the amount remaining (or radioactivity)...In addition, you have observations of a Geiger counter (in counts/s). The error of the observation is 2 counts/s, the error of the model is not constant but depends on value; the numbers are are already calculated for you...Now do the assimilation over the first 20 s*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b8d34d00-0abf-4a91-bf8c-9c2dc07334ec",
+   "execution_count": 10,
+   "id": "ab22518e-668c-4d24-9697-de326b033f13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decay_function(x, decay):\n",
-    "    data = x*math.exp(decay)\n",
+    "# defines forecast model\n",
+    "def first_func(i,x):\n",
+    "    # apply model formula to passed x\n",
+    "    data = x*math.exp(-0.5)\n",
+    "    # assign value to xb at index i\n",
+    "    mypd.at[i,\"xb\"] = data\n",
+    "    return\n",
+    "\n",
+    "# defines assimilation formula\n",
+    "def second_func(i,x):\n",
+    "    # select the standard deviation for this observation\n",
+    "    sb = mypd.at[i,\"_b2\"]\n",
+    "    # next steps applies formula\n",
+    "    constant = sb/(sb+2)\n",
+    "    step1 = mypd.at[i,\"y\"]-mypd.at[i,\"xb\"]\n",
+    "    step2= step1*constant\n",
+    "    step3 = mypd.at[i,\"xb\"] + step2\n",
+    "    #assigns value to x at index i\n",
+    "    data = step3\n",
+    "    mypd.at[i,\"x\"] = data\n",
+    "    return\n",
+    "\n",
+    "i = 0\n",
+    "while i < 21:\n",
+    "    if i == 0:\n",
+    "        # initial case, sets first value\n",
+    "        first_func(1,1000)\n",
+    "        second_func(i,mypd.at[i,\"xb\"])\n",
+    "    else:\n",
+    "        # all other cases, calls first_func on previous index, second_func on current index\n",
+    "        first_func(i,mypd.at[i-1,\"x\"])\n",
+    "        second_func(i,mypd.at[i,\"xb\"])\n",
     "    \n",
-    "    return data\n",
-    "def dependent(decayx, ):\n",
-    "    return"
+    "    #updates the counter variable\n",
+    "    i = i+1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c89211dd-018b-4863-aa9b-7e75468f4482",
+   "metadata": {},
+   "source": [
+    "## Question 2 Football example"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08fe43f4-a349-4ac8-ab0c-4ce0f9f232bd",
+   "id": "f20f7cb8-0214-4a8d-92b2-7bf01a02b73a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc[:, newdecy] = "
+    "# some code"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d97d12d0-addd-4714-869f-b40c8ee720a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/qm/b_vqfzj15gv6xshfw418_dfm0000gn/T/ipykernel_1410/217306388.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  mypd[\"xb\"][1] = mypd[\"x\"][0]*math.exp(decay)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# lambda(xi)=xbi+1\n",
-    "decay = -0.5\n",
-    "sigma = 0.05\n",
-    "mypd[\"xbx\"] = mypd[\"x\"][0]*math.exp(decay)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c9f7ab7d-375e-41b5-b9c2-4a848f9089f7",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"numpy.int64\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/qm/b_vqfzj15gv6xshfw418_dfm0000gn/T/ipykernel_1410/3963344654.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"x\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"xb\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"_b2\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"_b2\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mmypd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"_y2\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"numpy.int64\") to str"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "mypd[\"x\"][1] = mypd[\"xb\"][1]*(mypd[\"_b2\"][1]/(mypd[\"_b2\"][1] + mypd[\"_y2\"][1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0a91dfa-808f-4c8a-a19f-fa033e17a588",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mypd.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e59c1b7b-7577-4434-a868-44202c5e86c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "for i in mypd.index:\n",
-    "    mypd[\"xb\"][i] = mypd[\"x\"][i]*np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5f6f520-6d00-4407-a940-3e988a1087ce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
