--- a/process.ipynb
+++ b/process.ipynb
@@ -14,6 +14,7 @@
     "### Notes\n",
     "The original excel file was saved into .txt format with the following modifications:\n",
     "- text set to lowercase\n",
+    "- header removed\n",
     "- some columns renamed\n",
     "- pressure_e = sunrise pressure, pressure_t = sunset pressure, idem for temp.\n",
     "- afternoon_r = afternoon rain, morning_r = morning rain, idem for snow"
@@ -26,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import packages, notably the panda package for analysis\n",
+    "# import packages\n",
     "import pandas as pd\n",
     "import math\n",
     "\n",
@@ -109,12 +110,12 @@
     "grav = 9.80665\n",
     "ro = 13595.1\n",
     "\n",
-    "# define lambda function for conversion from millimters of mercury to modern units hPa\n",
+    "# define function for conversion from millimters of mercury to modern units hPa\n",
     "def mil_to_hpa(x):\n",
     "    data = ro*grav*x*0.00001\n",
     "    return data\n",
     "\n",
-    "# call lambda function on columns containing pressure values\n",
+    "# call function on columns containing pressure values\n",
     "mypd.p_sunrise=mypd.p_sunrise.apply(lambda x: mil_to_hpa(x))\n",
     "mypd.p_sunset=mypd.p_sunset.apply(lambda x: mil_to_hpa(x))"
    ]
@@ -158,7 +159,7 @@
    "id": "b2ccbfdd-7bb6-48f9-b315-96f373763ba2",
    "metadata": {},
    "source": [
-    "Fifth, correct for mean sea level (left as review exercise)"
+    "Fifth, correct for mean sea level"
    ]
   },
   {
