--- a/homogenization.ipynb
+++ b/homogenization.ipynb
@@ -5,7 +5,7 @@
    "id": "c8c315ff-7c00-4e12-aed5-afeb6abc5b1c",
    "metadata": {},
    "source": [
-    "# Question three\n",
+    "# Exercise 3 - Homogenization\n",
     "\n",
     "## Part I\n",
     "*For the Craddock test the accumulated normalized differences s are calculated as follows: si=si−1+ai−bi−(am−bm) where a is the reference series, b is the candidate series, am and bm are their long-term means (s0=0). Open the Excel-file or the R file with the txt-data and calculate si. Afterwards, find the breakpoints in the figure on the right in the Excel-sheet*"
@@ -19,7 +19,6 @@
    "outputs": [],
    "source": [
     "# import packages\n",
-    "\n",
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
@@ -32,7 +31,6 @@
     "from matplotlib import colors\n",
     "import seaborn as sns\n",
     "import matplotlib.dates as mdates\n",
-    "\n",
     "\n",
     "# read in the data\n",
     "mypd = pd.read_table(\"homogenization.txt\")\n",
@@ -84,7 +82,11 @@
    "id": "a46e5c7f-3754-4c90-993d-eea200857548",
    "metadata": {},
    "source": [
-    "As can be seen from visual inspection, the unique sections are from 2000-2001 (constant), 2002-2003 (decreasing), 2004-2007 (constant), 2008-2011 (increasing).\n",
+    "As can be seen from visual inspection, the unique sections are:\n",
+    "- 2000-2001 (constant), \n",
+    "- 2002-2003 (decreasing), \n",
+    "- 2004-2007 (constant), \n",
+    "- 2008-2011 (increasing).\n",
     "\n",
     "This means the break points are Dec 2001, Dec 2003 and Dec 2007."
    ]
@@ -157,13 +159,8 @@
    "source": [
     "# graph to inspect for errors\n",
     "\n",
-    "#select the columns to graph\n",
     "graphdata = mypd[[\"md\",\"Candidate_T(degC)\",\"Reference_T(degC)\",\"corrected\"]]\n",
-    "\n",
-    "# set graphdate to wide form automatically recognized by seaborne.\n",
     "graphdata = graphdata.pivot_table(index = \"md\")\n",
-    "\n",
-    "# plot graph\n",
     "sns.lineplot(data=graphdata)\n",
     "plt.show()"
    ]
