--- a/process.ipynb
+++ b/process.ipynb
@@ -5,7 +5,7 @@
    "id": "d497ec7b-310a-4ae5-84ed-18b059e48520",
    "metadata": {},
    "source": [
-    "## Weather and Climate Data Exercise One - \"Process\"\n",
+    "Exercise 1 - Process\n",
     "\n",
     "[Full Question](http://giub-torrent.unibe.ch/weather-simulation/#process)\n",
     "\n",
@@ -31,7 +31,7 @@
     "import pandas as pd\n",
     "import math\n",
     "\n",
-    "# import file into panda dataframe\n",
+    "# import file\n",
     "mypd = pd.read_csv(\"ClimateData_Process_Exercise.csv\")"
    ]
   },
